--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #000; /* Fondo negro como el espacio */
+        background: transparent; /* Fondo transparente */
       }
       model-viewer {
         width: 100%;
         height: 100%;
+        background-color: transparent; /* Transparencia en el visor */
       }
     </style>
   </head>
   <body>
-    <!-- Modelo 3D del Sistema Solar -->
-    <model-viewer src="solar_system_animation.glb"
-              alt="Sistema Solar"
-              auto-rotate
-              camera-controls
-              ar
-              ar-modes="scene-viewer quick-look webxr">
-</model-viewer>
+    <model-viewer src="solar-system.glb"
+                  ios-src="solar-system.usdz"
+                  alt="Sistema Solar"
+                  auto-rotate
+                  camera-controls
+                  ar
+                  ar-modes="scene-viewer quick-look webxr"
+                  disable-default-environment
+                  environment-image="neutral"
+                  shadow-intensity="1"
+                  exposure="1.2">
+    </model-viewer>
   </body>
 </html>
