--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <model-viewer src="solar-system.glb"
+    <model-viewer src="solar_system_animation.glb"
                   ios-src="solar-system.usdz"
                   alt="Sistema Solar"
                   auto-rotate
@@ -35,3 +35,4 @@
     </model-viewer>
   </body>
 </html>
+
