--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     </style>
   </head>
   <body>
-    <model-viewer src="solar_system_animation.glb"
+    <model-viewer src="sistema-solar-guada.glb"
                   alt="Sistema Solar"
                   auto-rotate
                   camera-controls
                   ar
                   ar-modes="scene-viewer quick-look webxr"
+                  disable-default-environment>
     </model-viewer>
   </body>
 </html>
