--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
   </head>
   <body>
     <model-viewer src="sistema-solar-guada.glb"
-                  alt="Sistema Solar"
-                  auto-rotate
-                  camera-controls
-                  ar
-                  ar-modes="scene-viewer quick-look webxr"
-                  disable-default-environment>
-    </model-viewer>
+              alt="Sistema Solar Animado"
+              autoplay
+              animation-name="Animation"
+              auto-rotate
+              camera-controls
+              ar
+              ar-modes="scene-viewer quick-look webxr"
+              disable-default-environment>
+</model-viewer>
   </body>
 </html>
+
 
 
