--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: transparent;#000
+        background: #000
       }
       model-viewer {
         width: 100%;
@@ -29,6 +29,7 @@
 </model-viewer>
   </body>
 </html>
+
 
 
 
