--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <model-viewer src="sistema-solar-guada.glb"
+    <model-viewer src="solar_system_animation.glb"
               alt="Sistema Solar Animado"
               auto-rotate
               camera-controls
@@ -29,6 +29,7 @@
 </model-viewer>
   </body>
 </html>
+
 
 
 
