--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
               camera-controls
               ar
               ar-modes="scene-viewer quick-look webxr"
+              disable-default-environment
+              autoplay
+              animation-name=>
+
 </model-viewer>
   </body>
 </html>
+
 
 
 
