--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Sistema Solar en AR</title>
+    <title>Sistema Solar Guada</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
       body {
@@ -33,3 +33,4 @@
     </model-viewer>
   </body>
 </html>
+
